adjust phone bubble layout so that it no longer covers login buttons

--- a/frontend/src/Components/Comment/Comment.css
+++ b/frontend/src/Components/Comment/Comment.css
@@ -331,7 +331,7 @@
 
 @media (max-width: 820px){
     .comment-bubble{
-        top: 27%;
-        left: 50%;
+        top: 10%;
+        left: 10%;
     }
 }
